fixed demo page error

--- a/resources/template/index.ejs
+++ b/resources/template/index.ejs
@@ -3,7 +3,7 @@
 <head>
   <title>Stylie Modal Windows</title>
   <link rel="stylesheet" type="text/css" href="stylesheets/example.css">
-  <link rel="stylesheet" type="text/css" href="stylesheets/ts.component.modals.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/stylie.modals.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Nifty Modal Window Effects with CSS Transitions and Animations" />
@@ -15,7 +15,7 @@
 <body class="ts--container ts-no-x-overflow">
   <main class="ts-container ">
     <article class="ts-text-container">
-      <section class="ts-no-x-overflow">
+      <section class="">
         <h1>CommonJS/Browserified Nifty Modal Window Effects
         </h1>
         <h3>
@@ -27,7 +27,7 @@
             <p>Ported from CoDrops: <a href="http://tympanus.net/codrops/2013/06/25/nifty-modal-window-effects/">Nifty Modal Window Effects</a>
             </p>
             <p>
-              <strong> Full API <a href="http://typesettin.github.io/ts.component.modals/api/html">documentation</a>
+              <strong> Full API <a href="http://typesettin.github.io/stylie.modals/api/html">documentation</a>
               </strong>
             </p>
           </div>
@@ -42,7 +42,7 @@
       </section>
     </article>
   </main>
-  <div class="ts-screenxx-hidden">
+  <div class="ts-modal-hidden-container">
     <% include shared/modals %>
       <div class="ts-modal-overlay ts-bg-accent-color"></div>
   </div>
